[package]
name = "polyester"
version = "0.1.0"
authors = ["QuietMisdreavus <grey@quietmisdreavus.net>"]
description = "Parallel iterator adaptors that accept arbitrary iterators"
documentation = "https://docs.rs/polyester"
repository = "https://github.com/QuietMisdreavus/polyester"
categories = ["concurrency", "rust-patterns"]
keywords = ["iterators", "parallel"]
license = "MPL-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "QuietMisdreavus/polyester" }
appveyor = { repository = "QuietMisdreavus/polyester" }

[dependencies]
num_cpus = "1"
synchronoise = "0.4.0"
# crossbeam-deque 0.2.0 is the version used by rayon-core 1.4.0
crossbeam-deque = "0.2.0"
rayon-core = "1"
